# FullstackPubg

./: Dockerfile.rust  docker-compose.yml
api-fetch/: Cargo.toml
api-fetch/data/: matches.json
api-fetch/data/matches/: 94b961cd-f937-4628-ab02-81351791adf1.json
api-fetch/src/: main.rs  season_data.rs
api-fetch/src/constants/: armors.rs  attachments.rs  damage_types.rs  default_bullet_speed.rs  hit_locations.rs  map_names.rs  mod.rs  player_names.rs  weapon_type.rs  weapons.rs
frontend/: Dockerfile  package-lock.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
frontend/src/components/: Footer.js  Header.js  Match.js  Matches.js
frontend/src/pages/: Home.js  MatchDetails.js
frontend/src/styles/: Match.css  Matches.css
nginx/: Dockerfile  default.config
redis/: Cargo.toml
redis/src/: main.rs
shared_utils/: Cargo.toml
shared_utils/src/: lib.rs
