[package]
name = "api-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["gzip", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = "0.4"
shared_utils = { path = "../shared_utils" }
