[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_utils = { path = "../shared_utils" }
dotenv = "0.15"
